fix: nutriscore page image size and other fixes (#652)
* fix: nutriscore page image size and other fixes

* new promo images

* new suggestions from SPF

---------

Co-authored-by: Off <off@openfoodfacts.org>

--- a/lang/fr/texts/new-nutriscore.html
+++ b/lang/fr/texts/new-nutriscore.html
@@ -1,15 +1,17 @@
-<center>
-  <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20evolves%20-%20A%20closer%20look%20-%20center%20-%20FR.png" alt="Le Nutri-Score evolue - Open Food Facts">
-</center>
+<br><br>
+
+<img src="https://static.openfoodfacts.org/images/misc/nutriscore/new-nutriscore-header-fr.jpg" alt="Le Nutri-Score evolue - Open Food Facts">
+
+<br><br>
 
 <div>
-   <p>Nous sommes heureux d'annoncer&nbsp;<strong>le lancement du Nutri-Score v2 sur Open Food Facts</strong>, la première mise à jour majeure du système d'étiquetage nutritionnel.</p>
+   <p>Nous sommes heureux d'annoncer&nbsp;<strong>le lancement du nouveau Nutri-Score sur Open Food Facts</strong>, la première mise à jour majeure du système d'étiquetage nutritionnel.</p>
    <p>Il est disponible dès aujourd'hui sur notre application mobile Open Food Facts pour Android et iPhone, ainsi que sur notre site Web, conformément à notre longue tradition de premières novatrices.</p>
 </div>
 <h2 class="title-2 emphasized-title">
     <strong>Qu'est-ce que le Nutri-Score ?</strong>
 </h2>
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20FR.png" alt="Qu'est-ce que le Nutri-Score ?">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/What%20is%20the%20Nutri-Score%20-%20FR.png" alt="Qu'est-ce que le Nutri-Score ?">
 <p>Nutri-Score est un logo qui a pour but de vous informer sur la qualité nutritionnelle des aliments.&nbsp;Le code couleur va du vert foncé (A) pour les produits les plus sains au rouge foncé (E) pour les moins sains.</p>
 <a class="button round secondary small" href="/nutriscore">Lisez notre page explicative sur le Nutri-Score</a>
 
@@ -17,8 +19,8 @@
     <strong>Pourquoi le Nutri-Score évolue-t-il ?</strong>
 </h2>
 
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="Informations sur le Nutri-Score">
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20facts%20-%20FR.png" alt="Informations sur le Nutri-Score">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Why%20a%20new%20algorithm%20-%20FR.png" alt="Pourquoi un nouvel algorithme">
 <p>La formule du Nutri-Score évolue pour fournir de meilleures recommandations basées sur de nouvelles connaissances scientifiques:</p>
 <ul>
    <li><strong>Mieux évaluer toutes les boissons</strong>&nbsp;-&nbsp;Les scores comparatifs du lait,&nbsp;des boissons lactées sucrées,&nbsp;et des boissons végétales ont été mieux différenciés dans le nouvel algorithme.</li>
@@ -47,31 +49,33 @@
 <h2 class="title-2 emphasized-title">L’algorithme évolue pour être plus conforme aux recommandations alimentaires</h2>
 <p>"Ce nouvel algorithme permettra d'améliorer l'efficacité du Nutri-score dans la classification des aliments et des boissons, en ligne avec les principales recommandations alimentaires des pays européens, et d'orienter les consommateurs vers des choix éclairés et bons pour leur santé"&nbsp;</>explique la Direction générale de la santé (France).</p>
 <p><strong>✅Critères renforcés</strong>&nbsp;</p>
-<p>L'équipe scientifique EREN a complètement&nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, ce qui a donné lieu à davantage de scores reflétant mieux la qualité nutritionnelle des produits,&nbsp;<strong>avec beaucoup d'entre eux perdant une note</strong>.</p>
+<p>Le comité scientifique européen du Nutri-Score a &nbsp;<strong>revu l'algorithme</strong>&nbsp;utilisé pour calculer le Nutri-Score, afin de mieux refléter la qualité nutritionnelle des produits.
+    <strong>30% à 40% des produits changent de score.</strong></p>
 <p><strong>✅&nbsp;</strong><strong>Bannière distinctive pour nouveau calcul</strong>&nbsp;</p>
-<p>La Nutri-Score v2 aura <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>. Bien que la bannière ne soit pas obligatoire sur les emballages, elle garantit que le Nutri-Score a été correctement calculé.</p>
+<p>Le logo Nutri-Score pourra à présent avoir <strong>une bannière distinctive</strong> indiquant qu'il a été calculé à l'aide <strong>de la nouvelle formule</strong>.
+    Bien que la bannière ne soit pas obligatoire sur les emballages, elle permet aux consommateurs de savoir que c’est le nouvel algorithme qui a été utilisé pour calculer le Nutri-Score.</p>
 <img src="https://world.openfoodfacts.org/images/misc/new-nutriscore/before-after-fr.png" alt="" width="600px" border="0" />
-<h2 class="title-2 emphasized-title">Où pouvez-vous trouver le Nutri-Score V2 ?</h1>
+<h2 class="title-2 emphasized-title">Où pouvez-vous trouver le nouveau Nutri-Score ?</h2>
 <ul>
-   <li><strong>Le site Web Open Food Facts :</strong>&nbsp;Vous pouvez trouver Nutri-Score v2 sur les pages produits de notre site Web,&nbsp;<a href="https://fr.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
-   <li><strong>L'application mobile officielle Open Food Facts :</strong>&nbsp;Le Nutri-Score v2 est également disponible aujourd'hui sur&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>notre app mobile</u></a>, vous permettant de scanner des produits et de voir leurs scores nutritionnels instantanément.</li>
-   <li><strong>La plateforme gratuite Open Food Facts pour les professionnels de l'alimentation :</strong>&nbsp;Nous avons mis à jour&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>notre plate-forme pour les professionnels</u></a>&nbsp;pour inclure le Nutri-Score v2,  permettre aux fabricants et aux détaillants d’aliments d’améliorer la qualité nutritionnelle de leurs produits.</li>
-   <li><strong>Nos exports OpenData :</strong>&nbsp;Nutri-Score v2 est également disponible en&nbsp;<a href="https://world.openfoodfacts.org/data"><u>nos exports de données</u></a>, permettant aux chercheurs, journalistes et autres parties prenantes d'accéder à ces nouvelles informations nutritionnelles.</li>
+   <li><strong>Le site Web Open Food Facts :</strong>&nbsp;Vous pouvez trouver le nouveau Nutri-Score sur les pages produits de notre site Web,&nbsp;<a href="https://fr.openfoodfacts.org/"><u>Open Food Facts</u></a>.</li>
+   <li><strong>L'application mobile officielle Open Food Facts :</strong>&nbsp;Le nouveau Nutri-Score est également disponible aujourd'hui sur&nbsp;<a href="https://world.openfoodfacts.org/open-food-facts-mobile-app?utm_source=off&amp;utf_medium=web&amp;utm_campaign=search_and_links_promo_en"><u>notre app mobile</u></a>, vous permettant de scanner des produits et de voir leurs scores nutritionnels instantanément.</li>
+   <li><strong>La plateforme gratuite Open Food Facts pour les professionnels de l'alimentation :</strong>&nbsp;Nous avons mis à jour&nbsp;<a href="https://world.pro.openfoodfacts.org/"><u>notre plate-forme pour les professionnels</u></a>&nbsp;pour inclure le nouveau Nutri-Score, permettre aux fabricants et aux détaillants d’aliments d’améliorer la qualité nutritionnelle de leurs produits.</li>
+   <li><strong>Nos exports OpenData :</strong>&nbsp;le nouveau Nutri-Score est également disponible en&nbsp;<a href="https://world.openfoodfacts.org/data"><u>nos exports de données</u></a>, permettant aux chercheurs, journalistes et autres parties prenantes d'accéder à ces nouvelles informations nutritionnelles.</li>
    <li><strong>Pour les 200+ applications Web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils pour&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/reference/api-tutorials/get-the-nutriscore/" target="_blank">soutenir la migration dans ce tutoriel</a>. Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a></li>
 </ul>
 <h2 class="title-2 emphasized-title">Pour les journalistes</h2>
 <ul>
-   <li><strong>Si vous abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse disponible sur demande autour du Nutri-Score V2 et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
+   <li><strong>Si vous abordez ce sujet,</strong>&nbsp;nous avons un dossier de presse disponible sur demande autour du nouveau Nutri-Score et d'Open Food Facts. <!--Nous avons également réalisé il y a quelques heures un webinaire presse qui sera prochainement disponible en replay.--> Si vous&rsquo;souhaitez être ajouté à nos listes de presse pour des briefings préalables, veuillez nous contacter au&nbsp;<a href="mailto:presse@openfoodfacts.org"><u>presse@openfoodfacts.org</u></a></li>
 </ul>
-
-<a class="button round secondary small" href="https://blog.openfoodfacts.org/fr/kit-de-presse-nouveau-nutri-score">Kit de presse sur le nouveau Nutri-Score v2</a>
+<a class="button round secondary small" href="https://blog.openfoodfacts.org/fr/kit-de-presse-nouveau-nutri-score">Kit de presse sur le nouveau Nutri-Score</a>
 <h2 class="title-2 emphasized-title">Pour les réutilisateurs</h2>
 <strong>Pour plus de 200 applications web et mobiles basées sur Open Food Facts,</strong>&nbsp;nous avons mis à disposition de nouveaux logos à utiliser et des conseils à&nbsp;<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/" target="_blank">prend en charge la migration dans ce tutoriel</a>.<a href="https://openfoodfacts.github.io/openfoodfacts-server/api/api-tutorials/get-the-nutriscore/">&nbsp;</a>Veuillez adresser vos questions supplémentaires à&nbsp;<a href="mailto:reuse@openfoodfacts.org"><u>reuse@openfoodfacts.org</u></a>
 <h4>Open Food Facts est un partisan historique du Nutri-Score depuis 2014.&nbsp;</h4>
-<img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
+<img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Nutri-Score%20%26%20Open%20Food%20Facts%20-%20FR.png" alt="Open Food Facts et le Nutri-Score">
+<br>
 <a class="button round secondary small" href="/open-food-facts-and-the-nutriscore">Lire notre page Open Food Facts et le Nutri-Score</a>
 
-<p>Nous pensons que Nutri-Score v2 est&nbsp;<strong>un outil précieux</strong>&nbsp;pour les consommateurs, les fabricants de produits alimentaires et les détaillants.&nbsp;</p>
+<p>Nous pensons que le nouveau Nutri-Score est&nbsp;<strong>un outil précieux</strong>&nbsp;pour les consommateurs, les fabricants de produits alimentaires et les détaillants.&nbsp;</p>
 <p>Il fournit:</p>
 <p><strong>✔ un résumé clair et concis de la qualité nutritionnelle</strong>&nbsp;des produits,&nbsp;</p>
 <p><strong>✔&nbsp;</strong>aider les consommateurs à faire des choix éclairés</p>
@@ -84,42 +88,42 @@
     <h3>Laits</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20FR.png" alt="Nutri-Score pour le lait entier">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20FR.png" alt="Nutri-Score pour le lait écrémé">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20whole%20-%20FR.png" alt="Nutri-Score pour le lait entier">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Milks%20-%20skimmed%20-%20FR.png" alt="Nutri-Score pour le lait écrémé">
         </div>
     </div>
 
     <h3>Boissons</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20FR.png" alt="Nutri-Score pour les jus de fruits">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20FR.png" alt="Nutri-Score pour l'eau">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20FR.png" alt="Nutri-Score pour les boissons sucrées">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20FR.png" alt="Nutri-Score pour le cola sans sucre">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Juices%20-%20FR.png" alt="Nutri-Score pour les jus de fruits">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Beverages%20-%20Water%20-%20FR.png" alt="Nutri-Score pour l'eau">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20FR.png" alt="Nutri-Score pour les boissons sucrées">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sugar%20sweetened%20beverages%20-%20Zero%20cola%20-%20FR.png" alt="Nutri-Score pour le cola sans sucre">
         </div>
     </div>
 
     <h3>Boissons sucrées et aromatisées</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20FR.png" alt="Nutri-Score pour les yaourts à boire">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20FR.png" alt="Dossier de presse Nutri-Score v2">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Drinkable%20yogurt%20-%20FR.png" alt="Nutri-Score pour les yaourts à boire">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Sweetened%20%26%20Flavored%20Drinks%20-%20Milk%20shake%20-%20FR.png" alt="Dossier de presse nouveau Nutri-Score">
         </div>
     </div>
 
     <h3>Huiles</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20FR.png" alt="Nutri-Score pour l'huile d'olive">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20FR.png" alt="Nutri-Score pour l'huile de tournesol">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Olive%20-%20FR.png" alt="Nutri-Score pour l'huile d'olive">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Oils%20-%20Sunflower%20-%20FR.png" alt="Nutri-Score pour l'huile de tournesol">
         </div>
     </div>
 
     <h3>Volaille et poisson</h3>
     <div class="carousel-container">
         <div class="carousel">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20FR.png" alt="Nutri-Score pour les volailles">
-            <img width="200px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20FR.png" alt="Nutri-Score pour les poissons gras">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Poultry%20-%20FR.png" alt="Nutri-Score pour les volailles">
+            <img width="400px" src="https://world.openfoodfacts.org/images/misc/new-nutriscore/Fatty%20fish%20-%20FR.png" alt="Nutri-Score pour les poissons gras">
         </div>
     </div>
 
