--- a/lang/fr/texts/green-score.html
+++ b/lang/fr/texts/green-score.html
@@ -2,7 +2,7 @@
 
 <img src="https://static.openfoodfacts.org/images/attributes/dist/ecoscore-a.svg" alt="Green-Score">
 
-<p><i>Le Green-Score est un score environnemental (écoscore) de A à E qui permet de comparer facilement l'impact des produits alimentaires sur l'environnement.</i></p>
+<p><i>Le Green-Score est un score environnemental de A à E qui permet de comparer facilement l'impact des produits alimentaires sur l'environnement.</i></p>
 
 <p>Note : le Green-Score est depuis fin 2024 le nouveau nom de l'Eco-Score.</p>
 
