--- a/lang/fr/texts/green-score.html
+++ b/lang/fr/texts/green-score.html
@@ -183,11 +183,11 @@ Le Green-Score des plats préparés. Cliquez pour voir les produits de chaque ca
 </div>
 
 <br>
-<h4>Obtenir les détails du calcul de l'Éco-Score pour tous les produits</h4>
+<h4>Obtenir les détails du calcul du Green-Score pour tous les produits</h4>
 
 <div class="row">
 <div class="small-12 medium-6 columns">
-<p>Pour chaque produit, un lien vous permet d'afficher le détail complet du calcul de l'Éco-Score.</p>
+<p>Pour chaque produit, un lien vous permet d'afficher le détail complet du calcul du Green-Score.</p>
 
 <p>Et si une information manque, n'importe qui peut la rajouter : le fabricant du produit mais aussi tous les citoyens engagés pour le climat, la protection de l'environnement et la transparence.</p>
 
@@ -212,10 +212,10 @@ Le Green-Score des plats préparés. Cliquez pour voir les produits de chaque ca
 
 <ul>
 <li>Avec le Green-Score, les consommateurs peuvent faire un choix plus éclairé en prenant en compte l'impact environnemental des produits comme critère de choix.</li>
-<li>L'Éco-Score encourage également les fabricants à améliorer leurs produits afin qu'ils obtiennent une note Éco-Score plus élevée.</li>
+<li>Le Green-Score encourage également les fabricants à améliorer leurs produits afin qu'ils obtiennent une note Green-Score plus élevée.</li>
 </ul>
 
-<p>Les fabricants améliorant l'Éco-Score de leurs produits constituent l'objectif ultime, car tous les consommateurs en tireront profit.</p>
+<p>Les fabricants améliorant le Green-Score de leurs produits constituent l'objectif ultime, car tous les consommateurs en tireront profit.</p>
 
 <p>La classification énergétique des appareils électroménagers a ainsi profondément transformé le marché (essayez de trouver un réfrigérateur classé E, voire D ou C !). Et la démocratisation du Nutri-Score a également incité de nombreux fabricants à améliorer la qualité nutritionnelle de leurs produits pour obtenir une meilleure note (au point que certains fabricants français s'en vantent même sur les arrêts de bus, comme Brossard pour son gâteau Savane).</p>
 
