fix: OPFF data page

--- a/lang/opff/en/texts/data.html
+++ b/lang/opff/en/texts/data.html
@@ -143,10 +143,12 @@ This API is not actively maintained, and not officially documented.
 
 <h3>Android and iPhone mobile app</h3>
 
-<p>The code for the Open Pet Food Facts mobile app is available on GitHub (<a href="https://github.com/openfoodfacts/smooth-app">Flutter</a>, <a href="https://github.com/openfoodfacts/openfoodfacts-androidapp">Kotlin Android</a> and <a href="https://github.com/openfoodfacts/openfoodfacts-ios">Swift iOS</a>).
+<p>The code for the current universal app called Open Food Facts is available on GitHub (<a href="https://github.com/openfoodfacts/smooth-app">Flutter</a>. It can scan and add pet food.
+ 
+The legacy Open Pet Food Facts mobile app, still available for Android is built on Kotlin. The plan is to update it to a Open Pet Food Facts branded flavor of the Flutter app.
 
 <p>We look to turn the deprecated Kotlin and Swift codebases into Kotlin and Swift SDKs, help welcome :-)
-The app allows users to scan the barcode of products, to view the product information, and to take and submit pictures and data for missing products.</p>
+<p><a href="https://github.com/openfoodfacts/openfoodfacts-androidapp">Kotlin Android</a> and <a href="https://github.com/openfoodfacts/openfoodfacts-ios">Swift iOS</a></p>
 <p>The app allows users to scan the barcode of products, to view the product information, and to take and submit pictures and data for missing products.</p>
 
 <p>You are welcome to reuse the code (it's open source) and help us improve it, for everyone, on all the planet.</p>
