--- a/lang/en/texts/new-nutriscore.html
+++ b/lang/en/texts/new-nutriscore.html
@@ -36,13 +36,13 @@ eader-en.jpg" alt="Nutri-Score evolves - A closer look">
 <p>From now on,&nbsp;the logo can display a &quot;New calculation&quot; mention to clarify that it is indeed the new calculation.</p>
 
 <h2 class="title-2 emphasized-title"><strong>Where to find the new Nutri-Score calculation?</strong></h2>
-<p>Nutri-Score is in use in several countries:&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
-<p>Manufacturers have at most 2 years at the latest after the decree is signed to replace the old calculation with the new one.</p>
+<p>Nutri-Score is in use in 7 countries: France&nbsp;Germany,&nbsp;Belgium,&nbsp;Spain,&nbsp;Luxembourg,&nbsp;the Netherlands,&nbsp;and Switzerland.</p>
+<p>Manufacturers have at most 2 years at the latest after the signature of the decree to replace the old calculation with the new one.</p>
 <p>Without waiting,&nbsp;you can already find the new calculation in the Open Food Facts application,&nbsp;even if the manufacturers have not updated the score.</p>
 
 <h2 class="title-2 emphasized-title"><strong>What does not change</strong></h2>
 <p>Nutri-Score is a score designed to measure nutritional quality.&nbsp;It is complementary to the NOVA group on ultra-processed foods (also present in the application).</p>
-<p>In France, the new computation of the Nutri-Score will get legally in force once the "Arrêté" is signed. The new computation will then progressively arrive on the product packagings.
+<p>In France, the new computation of the Nutri-Score is legally in force since the signature of the "Arrêté" in March 2025. The new computation will then progressively arrive on the product packagings, within 2 years..
 <p>For manufacturers, the display of Nutri-Score remains optional.</p>
 
 <h2 class="title-2 emphasized-title">The algorithm is evolving to be more in line with dietary recommendations</h2>
