fix: Update revue-de-presse-fr.html

--- a/lang/fr/texts/revue-de-presse-fr.html
+++ b/lang/fr/texts/revue-de-presse-fr.html
@@ -7,7 +7,7 @@
 </div>
 
 
-<p>Si vous avez repéré (ou publié) un article parlant d'Open Food Facts qui n'est pas dans cette liste, <a href="mailto:contact@openfoodfacts.org">merci de le nous signaler</a>.</p>
+<p>Si vous avez repéré (ou publié) un article parlant d'Open Food Facts qui n'est pas dans cette liste, <a href="mailto:presse@openfoodfacts.org">merci de le nous signaler par email</a> ou <a href="https://docs.google.com/forms/d/e/1FAIpQLScpzGaRX6Vr7nFHYuApVx5cz2zjU_bKA85qnQpXHsrY0M0KRA/viewform">directement via ce formulaire</a>.</p>
 
 <scripts>
 <script src="/js/jquery.dataTables.min.js"></script>
