--- a/lang/en/texts/presskit.html
+++ b/lang/en/texts/presskit.html
@@ -214,7 +214,7 @@
 
 <!-- texts/presskit_fr_FR_table.html -->
 <a class="button text-center" href="https://fr.openfoodfacts.org/revue-de-presse-fr">🇫🇷 Full press review about Open Food Facts</a><br>
-
+<p>If you have spotted (or published) an article about Open Food Facts that is not on this list, <a href="mailto:presse@openfoodfacts.org">please let us know by email</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLScpzGaRX6Vr7nFHYuApVx5cz2zjU_bKA85qnQpXHsrY0M0KRA/viewform">directly via this form</a>.</p>
 <!-- <hr> -->
 
 <!-- <div class="row text-center">
